# conslr

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  todo.txt
docs/: init.md  themes.md  widgets.md
examples/: activewidget.cpp  audioplayer.cpp  colorscheme.cpp  cppeditor.cpp  extendedtheme.cpp  loadfromfile.cpp  minimal.cpp  radiolist.cpp  rendering.cpp  screens.cpp  taggedstring.cpp  textcolors.cpp  texteditor.cpp  textinput.cpp  themeeditor.cpp  widgets.cpp
include/: conslr.hpp
include/conslr/: colorscheme.hpp  conslr.hpp  console.hpp  keymapping.hpp  screen.hpp  taggedstring.hpp  theme.hpp  widget.hpp  widgetfactory.hpp  widgetmanager.hpp
include/conslr/themes/: chameleon.hpp  defaulttheme.hpp  turboblue.hpp
include/conslr/widgets/: canvas.hpp  checklist.hpp  floatingtext.hpp  progressbar.hpp  radiolist.hpp  scrolllist.hpp  taggedfloatingtext.hpp  taggedtextbox.hpp  textbox.hpp  textinput.hpp
include/themes/: defaulttheme.hpp  turboblue.hpp
include/widgets/: scrolllist.hpp  taggedfloatingtext.hpp  textinput.hpp
res/: audioplayer.json  examplescr.json
res/themes/: chameleon.txt  default.txt  turboblue.txt
src/: console.cpp  screen.cpp  taggedstring.cpp  theme.cpp  widgetfactory.cpp  widgetmanager.cpp
tests/: main.cpp
